# practica1_EDD

./: CMakeLists.txt  CmakeScript.sh  Makefile  README.md
Modelo/: Baraja.h  ConfigPartida.h  Contendiente.h  ContextoPartida.h  Dominio.h  Ficha.h  FichaEspecial.h  FichaLibre.h  FichaNumeral.h  FichaPoderosa.h  FichaVolteo.h  ManoJugador.h  Paleta.h  Pantalla.h  RuedaTurnos.h
docs/: ManualUsuario.md  NivelComplejidad.md
include/TADs/: ListaCircular.h  ListaDoble.h  Nodo.h  Pila.h
src/: main.cpp
src/Modelo/: Baraja.cpp  ConfigPartida.cpp  Contendiente.cpp  FichaEspecial.cpp  FichaLibre.cpp  FichaNumeral.cpp  FichaPoderosa.cpp  FichaVolteo.cpp  Pantalla.cpp  RuedaTurnos.cpp
tests/: test_pila.cpp
